[package]
name = "rembrandt_kernels"
version = "0.1.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
build = "build.rs"

[lib]
name = "rembrandt_kernels"
path = "src/lib.rs"

#[build-dependencies.gcc]
#path = "../gcc-rs"

[build-dependencies]
gcc = "*"

[dependencies]
libc = "*"
cuda = { path = "../libcuda" }

#[dependencies.cuda]
#path = "../libcuda"
